--- a/InspectorTween.asmdef
+++ b/InspectorTween.asmdef
@@ -1,11 +1,7 @@
 {
-    "name": "InspectorTweenEditorAssembly",
-    "references": [
-        "GUID:fae26380cc27b244381416e8686519ce"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "name": "InspectorTween",
+    "references": [],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
