--- a/Editor/InspectorTween.Editor.asmdef
+++ b/Editor/InspectorTween.Editor.asmdef
@@ -1,8 +1,9 @@
 {
     "name": "InspectorTween.Editor",
     "references": [
-        "GUID:fae26380cc27b244381416e8686519ce"
+        "InspectorTween"
     ],
+    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
@@ -11,6 +12,5 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": []
+    "defineConstraints": []
 }
